k8s/spark-master-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 --file docker-compose.yml convert
      -o k8s
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: spark-master
  name: spark-master
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: spark-master
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 --file docker-compose.yml
          convert -o k8s
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/sparknet: "true"
        io.kompose.service: spark-master
    spec:
      containers:
      - command:
        - bash
        - -c
        - /opt/spark/sbin/start-master.sh && tail -f /dev/null
        image: mounirbs/spark-python3-java11:3.5.4
        imagePullPolicy: ""
        name: spark-master
        ports:
        - containerPort: 8080
        - containerPort: 7077
        - containerPort: 6066
        resources: {}
        volumeMounts:
        - mountPath: /opt/spark/work-dir/spark-warehouse/data
          name: spark-master-claim0
        - mountPath: /python
          name: spark-master-claim1
      hostname: spark-master
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: spark-master-claim0
        persistentVolumeClaim:
          claimName: spark-master-claim0
      - name: spark-master-claim1
        persistentVolumeClaim:
          claimName: spark-master-claim1
status: {}
