k8s/livy-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 --file docker-compose.yml convert
      -o k8s
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: livy
  name: livy
spec:
  ports:
  - name: "443"
    port: 443
    targetPort: 8998
  selector:
    io.kompose.service: livy
status:
  loadBalancer: {}
