k8s/spark-master-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 --file docker-compose.yml convert
      -o k8s
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: spark-master
  name: spark-master
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 8080
  - name: "7077"
    port: 7077
    targetPort: 7077
  - name: "6066"
    port: 6066
    targetPort: 6066
  selector:
    io.kompose.service: spark-master
status:
  loadBalancer: {}
